`linkify-line-numbers` - Fix occasional layout break (#9532)

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -303,3 +303,10 @@ review-thread-collapsible > .js-toggle-outdated-comments {
 .ActionListItem-singleSelectCheckmark {
 	transition: none !important;
 }
+
+/* Prevent empty diff cells from looking clickable */
+/* Info: https://github.com/refined-github/refined-github/pull/9532#pullrequestreview-4321433264 */
+/* Test: https://github.com/refined-github/sandbox/pull/81 */
+.empty-cell {
+	cursor: default !important;
+}
